# Blackhole

./: .gitignore  CMakeLists.txt
include/: animation.h  background.h  blackhole.h  bullet.h  clockslow.h  enemy.h  entity.h  game.h  game_parametrs.h  hard.h  health.h  mainwindow.h  menu.h  portal.h  score.h  sounds.h  spaceship.h
src/: animation.cpp  background.cpp  blackhole.cpp  bullet.cpp  clockslow.cpp  enemy.cpp  entity.cpp  game.cpp  hard.cpp  health.cpp  main.cpp  mainwindow.cpp  menu.cpp  portal.cpp  score.cpp  sounds.cpp  spaceship.cpp
